# tooler

./: .gitignore  Cargo.toml  README.md
src/: .env  commands.rs  json_serializer.rs  main.rs
src/config/: config.json  example.config.json
src/tests/: config.test.json
