[package]
name = "tooler"
version = "0.1.0"
edition = "2021"
features = ["derive"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
temp-env = "0.2.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"
